.kubernetes/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jokes-vue-deployment
  namespace: joker
  labels:
    app: jokes-vue-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: joke-vue-pod
  template:
    metadata:
      labels:
        app: joke-vue-pod
    spec:
      containers:
      - name: joke-vue-container
        image: registry:5000/m4rt1nn/joke-vue:0.0.1
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "500m"
            memory: "512Mi"
