.kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  name: joke-vue-service
  namespace: joker
spec:
  selector:
    app: joke-vue-pod
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: NodePort
